--- a/config/environment.rb.dist
+++ b/config/environment.rb.dist
@@ -1,4 +1,4 @@
 ENV['MAPQUEST_KEY'] = ''
-ENV['USERNAME'] = ''
-ENV['PASSWORD'] = ''
+ENV['BOT_USERNAME'] = ''
+ENV['BOT_PASSWORD'] = ''
 ENV['LOG_LEVEL'] = 'DEBUG'
