Configuring new relic.

--- a/config/environment.rb.dist
+++ b/config/environment.rb.dist
@@ -2,3 +2,6 @@ ENV['MAPQUEST_KEY'] = ''
 ENV['BOT_USERNAME'] = ''
 ENV['BOT_PASSWORD'] = ''
 ENV['LOG_LEVEL'] = 'DEBUG'
+ENV['NEW_RELIC_LICENSE_KEY'] = ''
+ENV['COMPILED'] = 'false'
+ENV['CACHE'] = 'false'
