Removing temporary session secret in favor of env variable.

--- a/config/environment.rb.dist
+++ b/config/environment.rb.dist
@@ -5,3 +5,4 @@ ENV['LOG_LEVEL'] = 'DEBUG'
 ENV['NEW_RELIC_LICENSE_KEY'] = ''
 ENV['COMPILED'] = 'false'
 ENV['CACHE'] = 'false'
+ENV['SESSION_SECRET'] = ''
