Creating results class for bot in favor of 'typed' yields. Removing base parser classes, unused method.

--- a/config/environment.rb.dist
+++ b/config/environment.rb.dist
@@ -1,6 +1,7 @@
 ENV['MAPQUEST_KEY'] = ''
 ENV['BOT_USERNAME'] = ''
 ENV['BOT_PASSWORD'] = ''
+ENV['BOT_USERAGENT'] = ''
 ENV['LOG_LEVEL'] = 'DEBUG'
 ENV['NEW_RELIC_LICENSE_KEY'] = ''
 ENV['COMPILED'] = 'false'
